Bug 1119088: Fix ability to set an image as desktop background via context menu on macOS. r=mstange,mconley